table+thead generate based on JSON file

--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
   </head>
   
   <main>
+    <h2 class="display-4">Tableau contenant des inforations sûr des personnages fictifs</h2>
     <button id="showCustomers">Afficher</button>
     <table class="table">
       <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Age</th>
-          <th scope="col">City</th>
-        </tr>
+
       </thead>
     </table>
   </main>
